--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "IRC-Style chat",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^2.6.1",
+    "express": "^4.17.1",
     "websocket": "^1.0.28",
     "yargs": "^13.2.4"
   },
