Added banList for IP's

--- a/server/config.json
+++ b/server/config.json
@@ -2,5 +2,8 @@
     "server": {
         "name": "Terradice's server",
         "password": ""
-    }
+    },
+    "banList": [
+        "::ffff:47.202.8.227"
+    ]
 }
