Added 'password' option to cli.js command line variables Added 'password' option to server/config.json Added error for bad password in structures/Reciever.js

--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,7 @@
 {
     "server": {
         "name": "Terradice's server",
-        "password": "password"
+        "password": ""
     },
     "banList": [
         
