Moved scryptSync() to structures/Cryptography.js to require less in server/server.js, clients/cli.js, /structures/Transmitter.js, structures/Reciever.js Improved clients/cli.js color handling added clients/colors.json for color handling

--- a/server/config.json
+++ b/server/config.json
@@ -8,11 +8,11 @@
     ],
     "roles": {
         "01": {
-            "styling": [ "FgRed" ],
+            "styling": [ "Fg-Red", "Underline" ],
             "name": "Owner"
         },
         "02": {
-            "styling": [ "FgGreen" ],
+            "styling": [ "Fg-Green" ],
             "name": "Guest"
         }
     }
