Now using sets (instead of arrays) in structures/Server.js, structures/HostServer.js, structures/Transmitter.js

--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,10 @@
 {
     "server": {
         "name": "Terradice's server",
-        "password": "password"
+        "password": "password",
+        "users": {
+            
+        }
     },
     "banList": [
         
