Added option to disable user passwords so users can log in with just a nickname

--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,8 @@
 {
     "server": {
         "name": "Terradice's server",
-        "password": "password"
+        "serverPassword": "",
+        "passwordRequired": false
     },
     "banList": [
         
