Ton of changes, FTP server is working, Client looks much better, i dont even remember everything

--- a/server/config.json
+++ b/server/config.json
@@ -2,7 +2,9 @@
     "server": {
         "name": "Terradice's server",
         "serverPassword": "",
-        "passwordRequired": false
+        "passwordRequired": false,
+        "ftp": true,
+        "ftpDir": "FTPFolder"
     },
     "banList": [
         
