--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "IRC-Style chat",
   "main": "index.js",
   "dependencies": {
+    "basic-ftp": "^3.6.0",
     "bcrypt": "^3.0.6",
     "ftp-srv": "^4.1.0",
     "readline-sync": "^1.4.9",
