Switched from websockets to normal TCP connections, why did i use websockets?

--- a/server/config.json
+++ b/server/config.json
@@ -3,7 +3,7 @@
         "name": "Terradice's server",
         "serverPassword": "password",
         "passwordRequired": false,
-        "ftp": true,
+        "ftp": false,
         "ftpDir": "FTPFolder"
     },
     "banList": [
